# Schmidty

./: .gitignore  README.md  Schmidty.cabal  ToLLVM.hs  stack.yaml
lib/: gc.ll  sch.c  sch.h  sch.ll
src/: AST.hs  AbsMachine.hs  CPS.hs  IRep.hs  Macro.hs  NameEli.hs  NameReassign.hs  Parsing2.hs  Schmidty.hs  ToAST.hs  ToLLVM.hs  TypeInfer.hs  Typing.hs
src/formal/: Context.v  LibTactics.v  Maps.v  smty.v
