name:                Schmidty
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Schmidty#readme
license:             GPL-3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Schmidty
  hs-source-dirs:      src
  main-is:             Schmidty.hs
  default-language:    Haskell2010
  other-modules:
      AST
      AbsMachine
      CPS
      IRep
      Macro
      NameEli
      NameReassign
      Parsing2
      ToAST
      ToLLVM
      Typing
  build-depends:       
      base >= 4.7 && < 5,
      mtl  >= 2.1.3,
      llvm-hs >= 4.0.0.0,
      llvm-hs-pure >= 4.0.0.0,
      bytestring  >= 0.10.8.2
